# pimat

./: .gitignore  README.md  pyproject.toml
pimat/: polynomial.py
protos/: __init__.py  polynomial.proto
pymath/: polynomial.py
scripts/: generate.py  generate_protoc.py
server/: __init__.py  client.py  server.py
tests/: test_polynomial.py
