[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pymath"
version = "0.1.0"
description = "Library of small math scripts"
readme = "README.md"
dependencies = []

[tool.setuptools.packages]
find = { where = ["."] } 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]