[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pymath"
version = "0.1.0"
description = "Library of small math scripts"
readme = "README.md"
dependencies = [
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0"
]

[project.scripts]
generate-grpc = "scripts.generate:main"

[tool.setuptools.packages]
find = { where = ["."] } 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]